fix wrapping of icons

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -234,3 +234,7 @@ footer {
 .navbar-right {
   float: right!important;
 }
+
+.navbar-nav > li {
+  float: left!important;
+}
